# archetypal

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  Transition.audit  appveyor.yml  azure-pipelines.yml  before_install.sh  benchmark_parser.py  combined.json  conf.py  environment.yml  eplusout.err  index.rst  install_energyplus.sh  make.bat  meta.yaml  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: code_quality.yml  main.yml  on-release-main.yml  python-build.yml  python-package-conda.yml  python-package.yml  python-publish.yml  release-drafter.yml  validate-codecov-config.yml
archetypal/: __init__.py  building.py  cli.py  core.py  dataportal.py  energydataframe.py  energypandas.py  energyseries.py  idf.py  idfclass.py  idfkit_adapter.py  load_umi_template.py  networks.py  plot.py  reportdata.py  schedule.py  settings.py  simple_glazing.py  simulation.py  tabulardata.py  template.py  trnsys.py  umi_template.py  utils.py  zone_graph.py
archetypal/eplus_interface/: __init__.py  basement.py  energy_plus.py  exceptions.py  expand_objects.py  slab.py  transition.py  version.py
archetypal/eplus_interface/extensions/: __init__.py  eppy.py  geometry.py
archetypal/idfclass/: __init__.py  end_use_balance.py  extensions.py  idf.py  load_balance.py  meters.py  outputs.py  reports.py  sql.py  util.py  variables.py
archetypal/idfclass/parser/: __init__.py  document.py  epjson_parser.py  exceptions.py  geometry.py  idf_model.py  idf_parser.py  objects.py  schema.py  writers.py
archetypal/idfclass/shoeboxer/: README.md  __init__.py  hvac_templates.py  shoebox.py  topology.py
archetypal/ressources/: originBUISketchUp.idf
archetypal/template/: __init__.py  building_template.py  conditioning.py  dhw.py  gas_material.py  glazing_material.py  load.py  measure.py  opaque_construction.py  opaque_material.py  schedule.py  structure.py  umi_base.py  ventilation.py  window.py  window_setting.py  zone.py  zone_construction_set.py  zonedefinition.py
archetypal/template/constructions/: base_construction.py  internal_mass.py  opaque_construction.py  window_construction.py
archetypal/template/db/: database.db  db_schema.json  schema.py
archetypal/template/materials/: __init__.py  gas_layer.py  gas_material.py  glazing_material.py  material_base.py  material_layer.py  nomass_material.py  opaque_material.py
archetypal/template/measures/: README.md  __init__.py  boston_default_windows.json  default_insulation.json  measure.py
archetypal/template/schema/: automodel.py  demo.ipynb  flatlib.json  graph_utils.py  lib.json  schema.json  schema.py  test_automodel.ipynb
archetypal/templates/: NewFileTemplate.d18  originBUISketchUp.idf
docker/: Dockerfile
docker/trnsidf/: NewFileTemplate.d18  readme.1st
docs/: assumptions.rst  caching.rst  commands.rst  conf.py  converter_bui.rst  converter_idf.rst  converter_umi.rst  converting.rst  creating_umi_template.rst  first.rst  index.rst  install.rst  package_modules.rst  reading_idf.rst  schedules.rst  troubleshooting.rst  tutorials.rst  unix_users.rst
docs/_static/: copybutton.js  name_equivalence.csv
docs/_templates/: autosummary-noinherit.rst  autosummary.rst
docs/commands/: convert.rst  reduce.rst  transition.rst
docs/examples/: api_extension.py  doe_conversion.py  parallel_process.py  zoneuncontrolled.idf
docs/modules/: data_portals.rst  idf.rst  schedules.rst  simple_glazing_module.rst  trnsys.rst  utils.rst
docs/notebooks/: Automatic upgrade.ipynb  Retreiving Meters & Variables.ipynb
docs/stubs/: archetypal.template.rst
docs/tutorials/: edit_umitemplate.rst  parallel_process.rst  register_function.rst  schedules.rst
eppy-plus/: README.md  pyproject.toml
eppy-plus/src/eppy_plus/: __init__.py  epjson_parser.py  exceptions.py  idf_parser.py  validation.py
eppy-plus/tests/: test_basic.py
idfkit/: .gitignore  README.md  pyproject.toml
idfkit/src/idfkit/: __init__.py  epjson_parser.py  exceptions.py  idf_parser.py  references.py
idfkit/tests/: test_basic.py
notebooks/: 3D HTML to Pandas.ipynb  IDF-OSM Read-old.ipynb  IDF-OSM Read-old2.ipynb  IDF-OSM Read.ipynb  Json Read.ipynb  OSM Reader.ipynb  OSM to OpaqueMaterial.ipynb  OSM to Schedule.ipynb  Run EPlus and read.ipynb  SimpleGlazingSystem Creation Example.ipynb  ZoneConditionings_SourceOfInfo.xlsx  Zones_by_Type.xlsx  read-umi-template.ipynb  umi_components_attributes.txt
paper/: paper.bib  paper.md
pyumi/: __init__.py  core.py  idf.py  load_umi_template.py  settings.py  simple_glazing.py  utils.py
pyumi/tests/: conftest.py  test_idf.py  test_read.py  test_simple_glazing.py  test_umi.py
scripts/: migrate_v2_to_v3.py
tests/: conftest.py  test_cli.py  test_core.py  test_dataportals.py  test_dhmin.py  test_end_use_balance.py  test_energypandas.py  test_energyplus_interface.py  test_energyseries.py  test_idf.py  test_idfclass.py  test_measure.py  test_networks.py  test_outputs.py  test_parser.py  test_plot.py  test_schedules.py  test_shoebox.py  test_simple_glazing.py  test_sql.py  test_template.py  test_trnsys.py  test_umi.py  test_utils.py  test_version.py  test_zonegraph.py
tests/input_data/: 5ZoneNightVent1.idf  CAN_PQ_Montreal.Intl.AP.716270_CWEC.epw  CAN_QC_Montreal-McTavish.716120_CWEC2016.epw  materials.idf  nat_ventilation_SAMPLE0.idf  test_profile.csv
tests/input_data/STD/: ASHRAE90.1_OfficeSmall_STD2013_Chicago.idf  ASHRAE90.1_OfficeSmall_STD2016_Buffalo.idf
tests/input_data/necb/: NECB 2011-FullServiceRestaurant-NECB HDD Method-CAN_PQ_Montreal.Intl.AP.716270_CWEC.epw.idf  NECB 2011-HighRiseApartment-NECB HDD Method-CAN_PQ_Montreal.Intl.AP.716270_CWEC.epw.idf  NECB 2011-HighriseApartment-NECB HDD Method-CAN_PQ_Montreal.Intl.AP.716270_CWEC.epw.idf  NECB 2011-Hospital-NECB HDD Method-CAN_PQ_Montreal.Intl.AP.716270_CWEC.epw.idf  NECB 2011-LargeHotel-NECB HDD Method-CAN_PQ_Montreal.Intl.AP.716270_CWEC.epw.idf  (+11 more)
(+122 files in other folders)
