[metadata]
description-file = README.md

[isort]
profile = black
multi_line_output = 3
skip = __init__.py

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    E501,

[tool:pytest]
log_cli = True
log_cli_level = INFO