[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idfkit"
version = "0.1.0"
description = "A fast, modern EnergyPlus IDF/epJSON parser with O(1) lookups and reference tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Samuel Letellier-Duchesne" },
]
keywords = [
    "energyplus",
    "idf",
    "epjson",
    "parser",
    "building simulation",
    "energy modeling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/samuelduchesne/idfkit"
Documentation = "https://github.com/samuelduchesne/idfkit#readme"
Repository = "https://github.com/samuelduchesne/idfkit"
Issues = "https://github.com/samuelduchesne/idfkit/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/idfkit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
